# A-Simple-Guide-to-RAG

./: .python-version  pyproject.toml
Chapters/Chapter-03/: indexing_pipeline.ipynb
Huggingface/: 1_codeAsimpleRag.ipynb  3_MultiModalRag.ipynb
cours/: ragFromStracth.ipynb  readme.md
cours/data/: GoldenSet.txt  restaurant.txt
