[project]
name = "a-simple-guide-to-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4==0.0.2",
    "byaldi>=0.0.7",
    "faiss-cpu==1.10.0",
    "html2text==2024.2.26",
    "ipywidgets>=8.1.8",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.7",
    "lxml==5.3.1",
    "matplotlib==3.10.0",
    "ollama>=0.6.1",
    "openai==1.64.0",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "python-dotenv==1.0.1",
    "qwen-vl-utils>=0.0.14",
    "ragas==0.2.13",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.12.1",
    "scikit-learn==1.6.1",
    "transformers>=4.57.6",
]
